--- a/css/datastory.css
+++ b/css/datastory.css
@@ -117,6 +117,10 @@ object{
 .bokeh_plot{
 	width:1000px;
 }
+.colormapImg{
+	text-align: center;
+	max-width:400px;
+}
 footer{
 	background-color: firebrick;
 	color: white; 
