--- a/css/datastory.css
+++ b/css/datastory.css
@@ -117,9 +117,11 @@ object{
 .bokeh_plot{
 	width:1000px;
 }
-.colormapImg{
-	text-align: center;
-	max-width:400px;
+img.colormapImg{
+	display: block;
+    margin-left: auto;
+    margin-right: auto
+    max-width:800px;
 }
 footer{
 	background-color: firebrick;
