--- a/css/datastory.css
+++ b/css/datastory.css
@@ -25,7 +25,7 @@ header{
 
 }
 .MainTitle{
-	font-family: "Helvetica Neue", sans-serif;
+	font-family: "Avenir Next Ultra Light";
 }
 .BottomHeader{
 	padding-top: 10px;
@@ -44,7 +44,7 @@ header{
 }
 .HeadText{
 	text-align: center ;
-	font-family: "Gill Sans", sans-serif;
+	font-family: "Avenir Next Ultra Light"; /*"Gill Sans", sans-serif;*/
 	font-size: 100%;
 }
 #Core{
@@ -56,31 +56,31 @@ header{
 	margin: 0 auto;
     width: 1000px;
     max-width: 1000px;
-    font-family: Helvetica Neue !important;
+    font-family: "Avenir Next Ultra Light" !important;/*Helvetica Neue !important;*/
 }
 h1{
 	text-align: center;
-	font-family: verdana;
-	font-size: 350%;
+	font-family: "Avenir Next Ultra Light";
+	font-size: 500%;
 }
 h2{
 	text-align: center;
-	font-family: Helvetica Neue;
+	font-family: "Avenir Next Ultra Light";
 	font-size: 140%;
 }
 h3{
 	text-align: left;
-	font-family: Helvetica Neue;
+	font-family: "Avenir Next Ultra Light";
 	font-size: 120%;
 }
 p{
 	text-align: justify;
-	font-family: Helvetica Neue;
+	font-family: "Avenir Next Ultra Light";
 	font-size: 100%;
 }
 ol{
 	text-align: left;
-	font-family: Helvetica Neue;
+	font-family: "Avenir Next Ultra Light";
 	font-size: 100%;
 }
 a:link{
@@ -97,7 +97,7 @@ object{
 }
 .Title{
 	text-align: center;
-	font-family: Helvetica Neue;
+	font-family: "Avenir Next Ultra Light";
 }
 .Right{
 	color: tomato;
@@ -170,19 +170,19 @@ footer{
 }
 .Date{
 	text-align: center ;
-	font-family: "Gill Sans", sans-serif;
+	font-family: "Avenir Next Ultra Light";
 	font-size: 100%;
 }
 .Names{
 	text-align: left ;
-	font-family: "Gill Sans", sans-serif;
+	font-family: "Avenir Next Ultra Light";
 	font-style: bold;
 	font-size: 14pt;
 	margin-top: 0px;
 	margin-bottom: 0px;
 }
 .MailText{
-	font-family: "Gill Sans", sans-serif;
+	font-family: "Avenir Next Ultra Light";
 	font-size: 12pt;
 	text-align: right;
 	margin-left:50px;
