--- a/css/datastory.css
+++ b/css/datastory.css
@@ -24,8 +24,16 @@ header{
 	box-shadow: 0px 0px 80px 10px lightsteelblue;
 
 }
+.HeadContent{
+	display: inline-block;
+	width: 1000px;
+}
+.TrollImage{
+	max-height: 75px;
+}
 .MainTitle{
-	font-family: "Avenir Next Ultra Light";
+	font-family: "Avenir";
+	font-weight: bold;
 }
 .BottomHeader{
 	padding-top: 10px;
@@ -61,7 +69,7 @@ header{
 h1{
 	text-align: center;
 	font-family: "Avenir Next Ultra Light";
-	font-size: 500%;
+	font-size: 450%;
 }
 h2{
 	text-align: center;
