--- a/css/datastory.css
+++ b/css/datastory.css
@@ -172,15 +172,15 @@ img.colormapImg{
 }
 footer{
 	background-color: cornflowerblue;
-	box-shadow: 0px 0px 80px 10px lightsteelblue;
+	box-shadow: inset 0px 50px 110px -50px lightsteelblue;
 	color: white; 
 	padding-top: 40px;
 	padding-bottom: 40px;
 	padding-right: 50px;
 	padding-left: 50px;
 	height: 80px;
-	border-top-left-radius: 15pt;
-	border-top-right-radius: 15pt;
+	border-top-left-radius: 10pt;
+	border-top-right-radius: 10pt;
 }
 .BottomLeftFooter{
 	float: left;
