--- a/css/datastory.css
+++ b/css/datastory.css
@@ -62,6 +62,7 @@ header{
     margin-top: 50px;
     margin-bottom: 50px;*/
     padding-top: 50px;
+    padding-bottom: 50px;
 	margin: 0 auto;
     width: 1000px;
     max-width: 1000px;
